# wonderwall-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCURL.cmake  FindJansson.cmake  FindRabbitMQ.cmake
include/: wonderwalld.h
share/debian/: wonderwall.default  wonderwall.service
share/docker/: Dockerfile  start.sh
src/: amqp.c  amqp.h  display.c  display.h  download.c  download.h  wonderwallc.c  wonderwalld.c
